# Wii-Sec-U

./: .gitignore  PLAN.md  README.md
.github/workflows/: ci.yml
docs/: building.md  limitations.md  protocol.md
pc/: CMakeLists.txt
pc/src/: main.cpp
pc/src/client/: client_app.cpp  client_app.h
pc/src/core/: controller_state.h  frame_assembler.cpp  frame_assembler.h  input_hub.cpp  input_hub.h
pc/src/gui/: gui_app.cpp  gui_app.h  gui_main.cpp  gui_video_view.cpp  gui_video_view.h  shared_input.h
pc/src/host/: host_app.cpp  host_app.h  session_server.cpp  session_server.h  wiiu_link.cpp  wiiu_link.h
pc/src/input/: input_backend.h  sdl_backend.cpp  synthetic_backend.cpp
pc/src/net/: udp_socket.cpp  udp_socket.h
pc/src/sim/: console_sim.cpp  console_sim.h
pc/src/util/: log.h  time_util.h
pc/src/video/: frame_decoder.cpp  frame_decoder.h  sdl_display_sink.cpp  sdl_display_sink.h  video_sink.h
pc/tests/: test_common.h  test_display.cpp  test_end_to_end.cpp  test_frame_assembler.cpp  test_frame_decoder.cpp  test_input_hub.cpp  test_protocol.cpp
protocol/: wsu_protocol.h
wiiu/: Dockerfile
wiiu/common/: wsu_wiiu.h
wiiu/input-plugin/: Makefile
wiiu/input-plugin/src/: injection.cpp  main.cpp  remote_input.h
wiiu/stream-plugin/: Makefile
wiiu/stream-plugin/src/: audio.cpp  capture.cpp  encoder.cpp  main.cpp  net.cpp  stream_state.h
